--- a/src/app/src/main/res/values/colors.xml
+++ b/src/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="orange_button">#FFA500</color>
     <color name="gray_button">#D3D3D3</color>
     <color name="soft_black">#222831</color>
+    <color name="blue">#FF33B5E5</color>
 </resources>
