--- a/src/app/src/main/res/values/colors.xml
+++ b/src/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_blue">#A0E9FF</color>
+    <color name="dark_blue">#008DDA</color>
     <color name="gray">#B5C0D0</color>
     <color name="red">#E78895</color>
     <color name="grey">#F5F5F5</color>
@@ -14,7 +15,7 @@
     <color name="pink">#F4627F</color>
     <color name="dark_pink">#D93F63</color>
     <color name="green">#C5C442</color>
-    <color name="teak">#88C4C4</color>
+    <color name="teal">#88C4C4</color>
     <color name="orange_button">#FFA500</color>
     <color name="gray_button">#D3D3D3</color>
     <color name="soft_black">#222831</color>
