--- a/src/app/src/main/res/layout/activity_search_result_page.xml
+++ b/src/app/src/main/res/layout/activity_search_result_page.xml
@@ -35,6 +35,7 @@
             android:layout_height="match_parent"
             android:background="@drawable/search_result_search_field_background"
             android:inputType="text"
+            android:paddingStart="16dp"
             android:paddingEnd="48dp" />
 
         <ImageView
@@ -61,7 +62,7 @@
 
         <LinearLayout
             android:id="@+id/llFilters"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:divider="@drawable/search_result_page_divider"
             android:dividerPadding="8dp"
@@ -69,28 +70,9 @@
             android:showDividers="middle">
 
             <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/btnSortBy"
-                    style="@style/FilterButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/search_result_page_button_background"
-                    android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
-                    android:drawablePadding="2dp"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="16dp"
-                    android:paddingTop="8dp"
-                    android:paddingRight="4dp"
-                    android:paddingBottom="8dp"
-                    android:text="Suggested" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content">
 
                 <TextView
@@ -104,9 +86,9 @@
                     android:gravity="center_vertical"
                     android:paddingLeft="16dp"
                     android:paddingTop="8dp"
-                    android:paddingRight="4dp"
-                    android:paddingBottom="8dp"
-                    android:text="Price" />
+                    android:paddingRight="6dp"
+                    android:paddingBottom="10dp"
+                    android:text="   Price   " />
 
             </RelativeLayout>
 
@@ -126,8 +108,8 @@
                     android:gravity="center_vertical"
                     android:paddingLeft="16dp"
                     android:paddingTop="8dp"
-                    android:paddingRight="4dp"
-                    android:paddingBottom="8dp"
+                    android:paddingRight="6dp"
+                    android:paddingBottom="10dp"
                     android:text="Condition" />
 
             </RelativeLayout>
@@ -142,14 +124,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/search_result_page_button_background"
-                    android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
                     android:drawablePadding="2dp"
                     android:gravity="center_vertical"
                     android:paddingLeft="16dp"
                     android:paddingTop="8dp"
-                    android:paddingRight="4dp"
-                    android:paddingBottom="8dp"
-                    android:text="Date listed" />
+                    android:paddingRight="6dp"
+                    android:paddingBottom="10dp"
+                    android:text="   Newest    " />
 
             </RelativeLayout>
 
@@ -162,9 +143,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/scrollViewFilters"
-        app:layout_constraintBottom_toBottomOf="parent">
-    </androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="40dp"></androidx.recyclerview.widget.RecyclerView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
