fix no name on homepage after register; add skip on intro page

--- a/src/app/src/main/res/layout/activity_home_page.xml
+++ b/src/app/src/main/res/layout/activity_home_page.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/txtUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ABCD"
+                android:text="Visitor"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
