--- a/src/app/src/main/res/layout/activity_intro_page.xml
+++ b/src/app/src/main/res/layout/activity_intro_page.xml
@@ -105,10 +105,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
         android:layout_marginBottom="16dp"
+        android:clickable="true"
         android:text="Register"
         android:textColor="@color/white"
-        android:textSize="20sp"
-        android:clickable="true"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -120,8 +120,22 @@
         android:layout_marginBottom="16dp"
         android:text="Login"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/btnSkipLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="Skip"
+        android:textColor="@color/gray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
+        app:layout_constraintStart_toEndOf="@+id/btnRegister" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
