add user state design pattern

--- a/src/app/src/main/res/layout/activity_user_page.xml
+++ b/src/app/src/main/res/layout/activity_user_page.xml
@@ -65,7 +65,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="16dp"
-                        android:text="sample"
+                        android:text="Visitor"
                         android:textSize="25sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toTopOf="@+id/useremail"
@@ -76,7 +76,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="16dp"
-                        android:text="sample@gmail.com"
+                        android:text="visitor@visitor.com"
                         android:textColor="@color/gray"
                         android:textSize="17sp"
                         app:layout_constraintStart_toEndOf="@+id/cvUserPic"
