For users who log in in skip mode, the interaction logic of the homepage-favorites button (pops up the login page) and the collection button on the product details page (pops up the login prompt) has been modified.

--- a/src/app/src/main/res/layout/activity_product_page.xml
+++ b/src/app/src/main/res/layout/activity_product_page.xml
@@ -104,7 +104,7 @@
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
-            <!-- 城市信息 -->
+            <!-- location info -->
             <TextView
                 android:id="@+id/textCityInfo"
                 android:layout_width="wrap_content"
