--- a/src/app/src/main/res/layout/viewholder_notification.xml
+++ b/src/app/src/main/res/layout/viewholder_notification.xml
@@ -16,7 +16,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/noti_view_icon"
             android:layout_width="80dp"
             android:layout_height="80dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -33,7 +33,7 @@
             android:text="TextView"
             android:textColor="@color/soft_black"
             android:textSize="20sp"
-            app:layout_constraintStart_toEndOf="@+id/imageView8"
+            app:layout_constraintStart_toEndOf="@+id/noti_view_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -43,7 +43,7 @@
             android:padding="8dp"
             android:text="TextView"
             android:textColor="@color/gray"
-            app:layout_constraintStart_toEndOf="@+id/imageView8"
+            app:layout_constraintStart_toEndOf="@+id/noti_view_icon"
             app:layout_constraintTop_toBottomOf="@+id/noti_view_title" />
 
         <ImageView
