--- a/src/app/src/main/res/layout/activity_search_result_page.xml
+++ b/src/app/src/main/res/layout/activity_search_result_page.xml
@@ -88,7 +88,7 @@
                     android:paddingTop="8dp"
                     android:paddingRight="6dp"
                     android:paddingBottom="10dp"
-                    android:text="   Price   " />
+                    android:text="   Price  " />
 
             </RelativeLayout>
 
@@ -103,14 +103,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/search_result_page_button_background"
-                    android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
                     android:drawablePadding="2dp"
                     android:gravity="center_vertical"
                     android:paddingLeft="16dp"
                     android:paddingTop="8dp"
                     android:paddingRight="6dp"
                     android:paddingBottom="10dp"
-                    android:text="Condition" />
+                    android:text="  Brand New   " />
 
             </RelativeLayout>
 
@@ -119,7 +118,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/btnDateListed"
+                    android:id="@+id/btnUsed"
                     style="@style/FilterButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -130,7 +129,7 @@
                     android:paddingTop="8dp"
                     android:paddingRight="6dp"
                     android:paddingBottom="10dp"
-                    android:text="   Newest    " />
+                    android:text="   Used     " />
 
             </RelativeLayout>
 
