Complete the UI and data presentation of the product editing page. Next step: Implement editing functionality

--- a/src/app/src/main/res/layout/products_manage_page.xml
+++ b/src/app/src/main/res/layout/products_manage_page.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="My Products"
+        android:text="Manage My Products"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
