--- a/src/app/src/main/res/layout/products_manage_list.xml
+++ b/src/app/src/main/res/layout/products_manage_list.xml
@@ -46,7 +46,7 @@
         android:id="@+id/edit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/product_manage_round_white_button"
+        android:background="#FFFFFF"
         android:text="Edit"
         android:textSize="16dp"
         android:textColor="#000000"
